Adicionado readme ao projeto com informações do build e de como executar o projeto.